# pet-desktop-tauri

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/adr/: 0001-native-pet-window-per-platform.md
prompts/: README.md  action-frame-pack.md  base-identity.md  character-model-sheet.md  negative.md  style-q-sticker.md
prompts/actions/: happy.md  idle.md  jump.md  sit.md  sleep.md  walk.md
prompts/examples/: cat-example.json  dog-example.json
src/: config.ts  generator.ts  main.tsx  pet-logic.test.ts  pet-logic.ts  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  native_pet.rs
tools/: nginx-upload-static.conf  upload-server.mjs
