[package]
name = "pet_desktop_tauri"
version = "0.1.0"
description = "A local desktop sticker pet MVP"
authors = ["rongyi"]
edition = "2021"

[lib]
name = "pet_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2.11.2", features = ["tray-icon"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk = "0.18.2"
gdk = "0.18.2"
gdk-pixbuf = "0.18.5"
glib = "0.18.5"
cairo-rs = "0.18.5"
